# SimpleCPP

./: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md
include/SimpleCPP/: pointer.h
tests/: CMakeLists.txt  pointer.cpp
